# csveer

./: README.md  csveer-overview.drawio
csveer-server/: .env  Cargo.toml  docker-compose.yml
csveer-server/.sqlx/: query-6ede621202e6ea3a7f7feba977b885008484db7d902f32257bb8a61e512e0fb1.json
csveer-server/docker/localstack/: create-queues.sh  create-s3-buckets.sh
csveer-server/migrations/: 20240220022304_create_context_table.sql  20240229001155_create_file_source_table.sql  20240305001451_create_table_destination.sql  20240314233804_create_data_dispatch_structure.sql
csveer-server/src/: lib.rs  main.rs
csveer-server/src/app/: context.rs  data_dispatch_queue.rs  file_destination.rs  file_ingestion_queue.rs  file_input.rs  file_source.rs  mod.rs
csveer-server/src/app/validators/: column_grouping.rs  fixed_batching.rs  mod.rs  sqs_destination.rs
csveer-server/src/commons/: file_storage.rs  mod.rs  queue_listener.rs
csveer-server/src/config/: aws.rs  listeners.rs  mod.rs  server.rs
csveer-server/src/data/: context.rs  data_dispatch.rs  data_dispatch_execution.rs  file_destination.rs  file_source.rs  mod.rs
csveer-server/tests/: context_test.rs  file_destination_test.rs  file_source_test.rs  integration_test.rs
csveer-server/tests/common/: mod.rs
csveer-server/tests/csv_samples/: basic_headerless_csv.csv
csveer-server/tests/requests/file_destination/: create_file_destination_0001.json  create_file_destination_0002.json  create_file_destination_0003.json  create_file_destination_0004.json  invalid_file_destination_0001.json  (+8 more)
(+4 files in other folders)
