[package]
name = "csveer-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { version = "0.15.7" }
tokio = { version = "1.36.0", features=["full"] }
sqlx-cli = "0.7.3"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "migrate", "postgres", "macros", "chrono", "time", "json" ] }
axum = { version = "0.7.4" }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.1", features = ["trace"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
chrono = { version = "0.4.34", features = ["serde"]}
anyhow = { version = "1.0.80" }
reqwest = { version = "0.11.24" }
tokio-util = { version = "0.7.10", features = ["rt"] }
rand = { version = "0.8.5" }
ulid = { version = "1.1.2" }
envy = { version = "0.4.2" }
dotenv = { version = "0.15.0" }
